name:                brainfuck
version:             0.1.0.0
synopsis:            A Haskell implementation of brainfuck interpreter
description:         Please see README.md
homepage:            https://github.com/kseo/brainfuck#readme
license:             BSD3
license-file:        LICENSE
author:              Kwang Yul Seo <kwangyul.seo@gmail.com>
maintainer:          Kwang Yul Seo <kwangyul.seo@gmail.com>
copyright:           Kwang Yul Seo 2016
category:            Language
stability:           Experimental
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Brainfuck
                       Brainfuck.Parser
                       Brainfuck.Interpreter
                       Brainfuck.Tape
                       Brainfuck.Types
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable brainfuck-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , brainfuck
                     , optparse-applicative
  default-language:    Haskell2010

test-suite brainfuck-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , brainfuck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kseo/brainfuck
